--- a/LabOnePartII/LabOnePart2.qsf
+++ b/LabOnePartII/LabOnePart2.qsf
@@ -53,48 +53,40 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 set_global_assignment -name VHDL_FILE LabOnePart2.vhd
-set_location_assignment PIN_Y21 -to LEDR[9]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[9]
-set_location_assignment PIN_W21 -to LEDR[8]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[8]
-set_location_assignment PIN_W20 -to LEDR[7]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[7]
-set_location_assignment PIN_Y19 -to LEDR[6]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[6]
-set_location_assignment PIN_W19 -to LEDR[5]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[5]
-set_location_assignment PIN_W17 -to LEDR[4]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[4]
-set_location_assignment PIN_V18 -to LEDR[3]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[3]
-set_location_assignment PIN_V17 -to LEDR[2]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[2]
-set_location_assignment PIN_W16 -to LEDR[1]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[1]
-set_location_assignment PIN_V16 -to LEDR[0]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LEDR[0]
-set_location_assignment PIN_AE12 -to SW[9]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[9]
-set_location_assignment PIN_AD10 -to SW[8]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[8]
-set_location_assignment PIN_AC9 -to SW[7]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[7]
-set_location_assignment PIN_AE11 -to SW[6]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[6]
-set_location_assignment PIN_AD12 -to SW[5]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[5]
-set_location_assignment PIN_AD11 -to SW[4]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[4]
-set_location_assignment PIN_AF10 -to SW[3]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[3]
-set_location_assignment PIN_AF9 -to SW[2]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[2]
-set_location_assignment PIN_AC12 -to SW[1]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[1]
-set_location_assignment PIN_AB12 -to SW[0]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to SW[0]
-set_location_assignment PIN_AA14 -to KEY[0]
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_AE12 -to S
+set_location_assignment PIN_AF10 -to X[3]
+set_location_assignment PIN_AF9 -to X[2]
+set_location_assignment PIN_AC12 -to X[1]
+set_location_assignment PIN_AB12 -to X[0]
+set_location_assignment PIN_AC9 -to Y[3]
+set_location_assignment PIN_AE11 -to Y[2]
+set_location_assignment PIN_AD12 -to Y[1]
+set_location_assignment PIN_AD11 -to Y[0]
+set_location_assignment PIN_V18 -to M[3]
+set_location_assignment PIN_V17 -to M[2]
+set_location_assignment PIN_V16 -to M[0]
+set_location_assignment PIN_W16 -to M[1]
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
