added some comments on part II, updated the pin assignment

--- a/LabOnePartII/LabOnePart2.qsf
+++ b/LabOnePartII/LabOnePart2.qsf
@@ -89,4 +89,10 @@ set_location_assignment PIN_V18 -to M[3]
 set_location_assignment PIN_V17 -to M[2]
 set_location_assignment PIN_V16 -to M[0]
 set_location_assignment PIN_W16 -to M[1]
+set_location_assignment PIN_W17 -to LEDR[4]
+set_location_assignment PIN_W19 -to LEDR[5]
+set_location_assignment PIN_Y19 -to LEDR[6]
+set_location_assignment PIN_W20 -to LEDR[7]
+set_location_assignment PIN_W21 -to LEDR[8]
+set_location_assignment PIN_Y21 -to LEDR[9]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
