--- a/LabTwo/LabTwoPartIII/LabTwoPartIII.qsf
+++ b/LabTwo/LabTwoPartIII/LabTwoPartIII.qsf
@@ -63,4 +63,18 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_AB12 -to B[0]
+set_location_assignment PIN_AC12 -to B[1]
+set_location_assignment PIN_AF9 -to B[2]
+set_location_assignment PIN_AF10 -to B[3]
+set_location_assignment PIN_AD11 -to A[0]
+set_location_assignment PIN_AD12 -to A[1]
+set_location_assignment PIN_AE11 -to A[2]
+set_location_assignment PIN_AC9 -to A[3]
+set_location_assignment PIN_AD10 -to Cin
+set_location_assignment PIN_V16 -to Sum[0]
+set_location_assignment PIN_W16 -to Sum[1]
+set_location_assignment PIN_V17 -to Sum[2]
+set_location_assignment PIN_V18 -to Sum[3]
+set_location_assignment PIN_W17 -to Cout
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
