--- a/LabTwo/LabTwoPartIII/LabTwoPartIII.qsf
+++ b/LabTwo/LabTwoPartIII/LabTwoPartIII.qsf
@@ -77,4 +77,5 @@ set_location_assignment PIN_W16 -to Sum[1]
 set_location_assignment PIN_V17 -to Sum[2]
 set_location_assignment PIN_V18 -to Sum[3]
 set_location_assignment PIN_W17 -to Cout
+set_global_assignment -name VHDL_FILE output_files/LabTwoPartIII_tb.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
