--- a/Lab3/LabThreePartIII/LabThreePartIII.qsf
+++ b/Lab3/LabThreePartIII/LabThreePartIII.qsf
@@ -116,4 +116,5 @@ set_location_assignment PIN_AC9 -to SW[7]
 set_location_assignment PIN_V16 -to Cout
 set_location_assignment PIN_AA15 -to clock
 set_location_assignment PIN_AA14 -to reset
+set_global_assignment -name VHDL_FILE output_files/IntToHexDisplay.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
