--- a/Lab3/LabThreePartIII/LabThreePartIII.qsf
+++ b/Lab3/LabThreePartIII/LabThreePartIII.qsf
@@ -113,8 +113,15 @@ set_location_assignment PIN_AD11 -to SW[4]
 set_location_assignment PIN_AD12 -to SW[5]
 set_location_assignment PIN_AE11 -to SW[6]
 set_location_assignment PIN_AC9 -to SW[7]
-set_location_assignment PIN_V16 -to Cout
-set_location_assignment PIN_AA15 -to clock
-set_location_assignment PIN_AA14 -to reset
 set_global_assignment -name VHDL_FILE output_files/IntToHexDisplay.vhd
+set_location_assignment PIN_AA14 -to KEY0
+set_location_assignment PIN_AA15 -to KEY1
+set_location_assignment PIN_V16 -to LEDR[0]
+set_location_assignment PIN_W16 -to LEDR[1]
+set_location_assignment PIN_V17 -to LEDR[2]
+set_location_assignment PIN_V18 -to LEDR[3]
+set_location_assignment PIN_W17 -to LEDR[4]
+set_location_assignment PIN_W19 -to LEDR[5]
+set_location_assignment PIN_Y19 -to LEDR[6]
+set_location_assignment PIN_W20 -to LEDR[7]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
